--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,13 @@ typechecking todo:
 - fail type of implicit handlers/naked handler calls
 
 variables todo:
-- let vs mut
 - mutable captures
+
+tokenizer/parser:
+- seperate token from data
+- custom anchor tokens per Parse instance
 
 would be nice:
 - try blocks no longer their own function
+- analyzer gives semantic IR
+- tokenizer matches brackets
