--- a/todo.txt
+++ b/todo.txt
@@ -9,8 +9,8 @@ parser todo:
 - operator precedence
 
 todo:
+- !!! deallocate stuff in loops
 - separate generation code from data types
-- for loops
 - unbounded ranges
 - fail in try blocks
 - opaque types (they will be view types)
