--- a/todo.txt
+++ b/todo.txt
@@ -1,24 +1,19 @@
-typechecking todo:
-- fail type in handlers
-- fail type of implicit handlers/naked handler calls (and only allowed in try blocks if they fail!)
-- handler function must match signature
-- functions that return handlers must not be (mutually) recursive
-- functions must not be (mutually) recursive through try blocks
-
 parser todo:
 - operator precedence
 
 todo:
 - !!! deallocate stuff in loops
-- separate generation code from data types
+- "with" for pushing handlers, "try" for yeeting inside regular functions
+- reference parameters / variables / outputs
 - unbounded ranges
-- fail in try blocks
-- opaque types (they will be view types)
 - error if core library not found
+- effect associated types
+- effect associated handlers
+- dynamic effects (less powerfull, but are ONE type for every handler)
+- anonymous effects (are always dynamic)
+- separate types in sema::Type according to their Kind
 
 would be nice:
 - tokenizer matches brackets
 - seperate token from data
 - custom anchor tokens per Parse instance
-- analyzer gives semantic IR
-- try blocks no longer their own function
